tests/baselines/reference/templateStringInModuleName.errors.txt
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(1,9): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(1,16): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(1,21): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(4,9): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(4,16): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(4,24): error TS1005: ';' expected.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(1,1): error TS2304: Cannot find name 'declare'.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(1,9): error TS2304: Cannot find name 'module'.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(4,1): error TS2304: Cannot find name 'declare'.
tests/cases/conformance/es6/templates/templateStringInModuleName.ts(4,9): error TS2304: Cannot find name 'module'.


==== tests/cases/conformance/es6/templates/templateStringInModuleName.ts (10 errors) ====
    declare module `M1` {
            ~~~~~~
!!! error TS1005: ';' expected.
                   ~~~~
!!! error TS1005: ';' expected.
                        ~
!!! error TS1005: ';' expected.
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS2304: Cannot find name 'module'.
    }
    
    declare module `M${2}` {
            ~~~~~~
!!! error TS1005: ';' expected.
                   ~~~~
!!! error TS1005: ';' expected.
                           ~
!!! error TS1005: ';' expected.
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~
!!! error TS2304: Cannot find name 'module'.
    }